@@ -119,7 +119,7 @@ class Program {
 
                 compiler.work.in_name = srcFile;
                 compiler.work.out_name = Path.combine(Path.getDirectoryName(Path.getFullPath(srcFile)),
-                        String.format("%s%s", Path.getFileNameWithoutExtension(srcFile), ".h"));
+                        "%s%s".formatted(Path.getFileNameWithoutExtension(srcFile), ".h"));
                 compiler.work.ef_name = Path.combine(Path.getDirectoryName(Path.getFullPath(srcFile)), compiler.work.ef_name);
                 compiler.work.inc_name = Path.combine(Path.getDirectoryName(Path.getFullPath(srcFile)), compiler.work.inc_name);
 
@@ -136,7 +136,7 @@ class Program {
                 if (tags != null && tags.length > 0) {
                     for (Tuple<String, String> tag : tags) {
 //#if DEBUG
-                        logger.log(Level.TRACE, String.format("%s\t: %s", tag.getItem1(), tag.getItem2()));
+                        logger.log(Level.TRACE, "%s\t: %s".formatted(tag.getItem1(), tag.getItem2()));
 //#endif
                         // Get the output file name
                         //if (tag.getItem1().toUpperCase().indexOf("#FI") != 0) continue; // Because mc is judged up to three characters
@@ -153,7 +153,7 @@ class Program {
                         // When specifying the extension only
                         destFileName = Path.combine(
                                 Path.getDirectoryName(Path.getFullPath(srcFile)),
-                                String.format("%s%s", Path.getFileNameWithoutExtension(srcFile), outFileName));
+                                "%s%s".formatted(Path.getFileNameWithoutExtension(srcFile), outFileName));
                     }
                 }
 
@@ -183,7 +183,7 @@ class Program {
                 }
             } else {
                 String destFileName = Path.combine(Path.getDirectoryName(Path.getFullPath(srcFile)),
-                        String.format("%s.xml", Path.getFileNameWithoutExtension(srcFile)));
+                        "%s.xml".formatted(Path.getFileNameWithoutExtension(srcFile)));
                 if (desFile != null) {
                     destFileName = desFile;
                 }
